sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:16: error: recursive variable e needs type
            var e=e
                  ^